# fastapi-democode

./: .env.template  README.md  gunicorn.conf.py  manage.py  pyproject.toml
app/: health.py  initial_data.py  main.py  worker.py
app/core/: auth.py  config.py
app/db/: config.py
app/services/email/: __init__.py  smtp.py
app/users/: manager.py  routes.py
